k8s/go-product/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: go-product
  labels:
    name: go-product
    module: Namespace
