k8s/go-product/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: go-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pods
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: sing3demons/go-api-v2-product:0.0.3
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
              - cat
              - /tmp/live
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 30
          failureThreshold: 5
        resources:
          # requests:
          #   memory: 500Mi
          #   cpu: 200m
          # limits:
          #   memory: "1Gi"
          #   cpu: "500m"
        ports:
        - containerPort: 8080
        volumeMounts:
            - mountPath: /uploads
              name: go-product
      volumes:
        - name: go-product
          persistentVolumeClaim:
            claimName: app-pvc
