k8s/go-product/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-server
  namespace: go-product
spec:
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
