k8s/go-product/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: go-product
  labels:
    name: myingress
spec:
  rules:
  - host: kp.sing3demons
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: go-server
            port: 
              number: 8080
